# DirectXMesh

./: .gitignore  CMakeLists.txt  ReadMe.txt
DirectXMesh/: CMakeLists.txt  DirectXMesh.h  DirectXMesh.inl  DirectXMeshOptimizeLRU.cpp  DirectXMeshP.h  DirectXMeshTypes.h  DirectXMeshWeldVertices.cpp  DirectXMesh_Desktop_2017_Win10.vcxproj  scoped.h
DirectXMesh/include/DirectXMesh/: DirectXMesh.h  JntLinuxTypes.h
